# jax-flow

./: README.md  experiments.md  pyproject.toml  remote_run.sh
src/jax_flow/: ae.py  diffusion.py  vae.py
src/jax_flow/datasets/: cath.py  celeb_a.py  celeba_cached.py  fashion_mnist.py  imagenet.py  oxford_iiit_pet.py
src/jax_flow/experiments/: 01-simple-manifold-aware-bottleneck-simple-spiral-data.py  02-simple-manifold-aware-bottleneck-warped-manifold-spiral-data.py  03-soft-rank-selector-manifold-aware-bottleneck-warped-manifold-spiral-data.py  04-soft-rank-selector-manifold-aware-bottleneck-warped-manifold-swissroll-data.py  05-jit-for-synthetic-diagonal-data-generation.py  06-jit-for-protein-generation-cath.py  07-jit-for-celeb-a.py  08-jit-for-celeb-a-fast.py  09-jit-celeb-a-referenced.py  manifold-aware-bottleneck.py
src/jax_flow/modules/: unet.py
