[project]
name = "jax-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=2.14.0",
    "flax==0.12.0",
    "gdown>=5.2.0",
    "jaxpt",
    "huggingface-hub>=0.20.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "torchvision>=0.23.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]==0.7.1",
]

metal = [
    "jax==0.7.1",
]

[tool.poetry]
packages = [{ include = "jax_flow", from = "src" }]

[project.scripts]
jax-flow = "jax_flow:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["jax_flow*"]

[tool.uv.sources]
jaxpt = { path = "../jaxpt" }
